Style change: Question 1 -> Problem

--- a/logarithmic-spiral.tex
+++ b/logarithmic-spiral.tex
@@ -69,7 +69,7 @@
 %	ASSIGNMENT CONTENT
 %----------------------------------------------------------------------------------------
 
-\section*{Question 1}
+\section*{Problem}
 
 \begin{problem}
     Let $α : \R → \R^2$ be the parametrized curve given by $α(t) = ae^{bt}(\cos t, \sin t)$,
