Fixed Surface Gradient: riesz justifies gradient not differential

--- a/surface-gradient.tex
+++ b/surface-gradient.tex
@@ -150,7 +150,7 @@ The gradient is a good example of a field of tangent vectors over $S$.
     \textit{Riesz Theorem} states that for any linear functional $F$
 over a finite dimensional\footnotemark Hilbert space (like $T_pS$),
 there exists a vector $v$ such that $F = \braket{v}{\cdot}$.
-This theorem justifies the definition of the differential.
+This theorem justifies the definition of the gradient.
 That the gradient points in the direction of greatest slope is a consequence of
 \textit{Cauchy-Schwarz} inequality.
 %
