Fixed Helix Surface: typos with sign value

--- a/helix_surface.tex
+++ b/helix_surface.tex
@@ -161,10 +161,10 @@ Therefore
 %
 We can see that the right part, $-\sin{φ}N_β(s) + \cos{φ}\n$, is unitary,
 but in order to preserve the sign of $X_s \cross X_t$,
-we need to know the sign of $1 - \cos{φ}t$.
+we need to know the sign of $1 - \cos{φ}tκ_β(s)$.
 
     Now it is clear that we need to study the domain of $X$,
-because depending on the sign of $1 - \cos{φ}t$,
+because depending on the sign of $1 - \cos{φ}tκ_β(s)$,
 the normal is $-\sin{φ}N_β(s) + \cos{φ}\n$ or it is $\sin{φ}N_β(s) - \cos{φ}\n$.
 What is more, when $φ \ne \frac{π}{2}$ and $κ_β(s) \neq 0$,
 $X_s\qty(s, \frac{1}{\cos{φ}κ_β(s)}) = 0$.
@@ -177,7 +177,7 @@ In general,
     N_{S_φ} = \mp \sin{φ}N_β \pm \cos{φ}\n,
 \end{equation*}
 %
-where the sign is given by the sign of $1 - \cos{φ}N_β(s)$.
+where the sign is given by the sign of $1 - \cos{φ}tκ_β(s)$.
 
 \subsubsection*{Item \ref{stm:ii}}
 
@@ -225,7 +225,7 @@ but it is not an asymptotic curve unless
     -\frac{\sin{φ}κ_β(s)}{2(1 - t\cos{φ}κ_β(s))} = 0.
 \end{equation*}
 %
-That is, when $φ = \frac{π}{2}$ or $κ_β(s) = 0$.
+That is, when $φ = 0$ or $κ_β(s) = 0$.
     
 \subsubsection*{Item \ref{stm:iv}}
 
@@ -238,8 +238,7 @@ When $φ = \frac{π}{2}$,
 an extrusion of $β$ in perpendicular to the plain it is contained in.
 For example, if $β$ is a fraction of a circle,
 $S_{\frac{π}{2}}$ would be a fraction of a cylinder.
-In other cases, it would be something that resembles a cylinder.
-Let us call it a fraction of a pseudo-cylinder.
+We call the surface obtained with any curve a generalized cilinder.
 
 When $φ = 0$,
 %
