--- a/convenient_coordinates.tex
+++ b/convenient_coordinates.tex
@@ -144,7 +144,7 @@ the differential equation for a geodesic\footnote{
         v'' + (u')^2Γ^2_{11} + 2u'v'Γ^2_{12} + (v')^2Γ^2_{22} = 0
     \end{cases},
 \end{equation*}
-become
+becomes
 \begin{equation*}
     \begin{cases}
         a^2Γ^1_{11} + 2abΓ^1_{12} + b^2Γ^1_{22} = 0 \\
